<resources>
    <string name="app_name" translatable="false">Life Adviser</string>
    <string name="personal_adviser">personal adviser</string>
    <string name="start">Start</string>
    <string name="how_it_works">How it works?</string>
    <string name="quick_tip">Quick tip</string>
    <string name="make_a_question">Make a question</string>
    <string name="favorite">Favorite</string>
    <string name="tip_of_the_day">Tip of the Day</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="use_the_tip_of_the_day">Day advice</string>
    <string name="to_get_advice">To get advice</string>
    <string name="tips_are_not_available">Tips are not available, you can use Quick tip.</string>
    <string name="tip">Tip</string>
    <string name="knock">Knock</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>

    <string-array name="entries_languages">
        <item>@string/english</item>
        <item>@string/russian</item>
        <item>@string/ukrainian</item>
    </string-array>

    <string-array name="entries_values_languages">
        <item>en</item>
        <item>ru</item>
        <item>uk</item>
    </string-array>
</resources>
